# cse3210-clang-tidy

./: .clang-tidy  .gitignore  event.json  meson.build
.devcontainer/: devcontainer.json
src/: CSE3210HeaderGuardCheck.cpp  CSE3210TidyModule.cpp  HeaderGuardCheck.cpp  HeaderGuardCheck.h  LicenseCheck.cpp  LicenseCheck.h
